# FML-DG_Platform

./: FlowerInstructions.md  PlatformInstructions.md  Preprocessing-Flower-1.ipynb  Preprocessing-Platform-3.ipynb  README.md
ClientForFlower/FLTrainingExperimentsClient3/: pyproject.toml
ClientForFlower/FLTrainingExperimentsClient3/src/fl-training-experiments/: Preprocessing-Flower-3.ipynb
ClientForFlower/FLTrainingExperimentsClient3/src/fl-training-experiments/data/raw_data/: wine_dataset_trial.csv
ClientForFlower/FLTrainingExperimentsClient3/src/fl-training-experiments/flower/: Util.py
ClientForPlatform/FLClient1/: Dockerfile  pyproject.toml
ClientForPlatform/FLClient1/src/fl-client/: Preprocessing-Platform-1.ipynb  main.py
ClientForPlatform/FLClient1/src/fl-client/util/: GreatExpectationService.py  SimplePreprocessing.py
ClientForPlatform/FLClient1/src/fl-client/util/result_parser/: CreateDashboardApp.py
FLTrainingExperimentsServer/: pyproject.toml
FLTrainingExperimentsServer/src/fl-training-experiments/: Server.py
FLTrainingExperimentsServer/src/fl-training-experiments/data/training_data_preprocessed/wine_dataset/: X_test.csv  X_train.csv
FLTrainingExperimentsServer/src/fl-training-experiments/flower/: Evaluator.py  FedAvgRewritten.py  FedXgbBagging.py  Metrics.py
Platform/Data_Governance_Orchestrator/: Dockerfile  Makefile  bandit.yml  package-lock.json  pyproject.toml  setup.cfg  start.sh
Platform/Data_Governance_Orchestrator/ProvenanceMetadataNeo4J/: Dockerfile  README.md  README_NON_DEV.md  pyproject.toml  run_metadata_api.py  start.sh
Platform/Data_Governance_Orchestrator/ProvenanceMetadataNeo4J/metadata/: __init__.py  const.py  token.py
Platform/Data_Governance_Orchestrator/ProvenanceMetadataNeo4J/metadata/api/: database_connection.py  metadata_api.py
Platform/Data_Governance_Orchestrator/ProvenanceMetadataNeo4J/metadata/api/models/: activity_model.py  agent_model.py  entity_models.py  grouped_activity_model.py  num_of_actions_model.py
Platform/Data_Governance_Orchestrator/ProvenanceMetadataNeo4J/metadata/api/routers/: action_router.py  config_router.py  dataset_router.py  dev_router.py  group_router.py  model_router.py  organisation_router.py  proposal_router.py  strategy_router.py  user_router.py
Platform/Data_Governance_Orchestrator/ProvenanceMetadataNeo4J/metadata/dbmanager/: neo4j_connection.py
Platform/Data_Governance_Orchestrator/ProvenanceMetadataNeo4J/metadata/dbmanager/exceptions/: group_does_not_exist.py  no_actions.py  relationship_does_not_exist.py  strategy_does_not_exist.py  user_does_not_exist.py  version_does_not_exist.py
Platform/Data_Governance_Orchestrator/ProvenanceMetadataNeo4J/metadata/dbmanager/queries/: create.py  delete.py  interactions.py  retrieve.py  update.py
Platform/Data_Governance_Orchestrator/ProvenanceMetadataNeo4J/metadata/middleware/: metadata_middleware.py  middleware_operations_manager.py
Platform/Data_Governance_Orchestrator/ProvenanceMetadataNeo4J/metadata/middleware/operations/: add_config.py  add_qualitiy_requirement.py  add_user_to_group.py  create_configuration_proposal.py  create_dataset.py  create_group.py  create_ml_model.py  create_organisation.py  create_proposal.py  create_quality_requirement_proposal.py  create_strategy.py  create_user.py  delete_config.py  delete_dataset.py  delete_group.py  delete_ml_model.py  delete_organisation.py  delete_proposal.py  delete_qr.py  delete_strategy.py  delete_user.py  delete_vote.py  end_voting.py  middleware_operation.py  update_config.py  update_dataset.py  update_group.py  update_model.py  update_organisation.py  update_qr.py  (+5 more)
Platform/Data_Governance_Orchestrator/federatedmlrest/: MysqlTest.py  config.yml  keycloak_auth.py  keycloak_auth_old.py  main.py  minioS3.py  mongo.py  mysql.py  yaml_generator.py
Platform/Data_Governance_Orchestrator/federatedmlrest/api/: DBConnection.py  dependencies.py  errors.py  exceptions.py  tags.py
Platform/Data_Governance_Orchestrator/federatedmlrest/api/models/: common.py  config_models.py  dataset_models.py  deleted_model.py  group_models.py  metadata_models.py  ml_model_models.py  organisation_models.py  proposal_models.py  quality_requirements_models.py  result_models.py  results_models.py  strategy_models.py  user_models.py
Platform/Data_Governance_Orchestrator/federatedmlrest/api/routers/: auth.py  configurations.py  datasets.py  groups.py  metadata.py  ml_models.py  organisations.py  proposals.py  quality_requirements.py  results.py  strategies.py  users.py
Platform/Data_Governance_Orchestrator/federatedmlrest/files_for_testing/: Evaluation_F1Score.csv  Evaluation_F1ScoreMacro.csv  Evaluation_MCC.csv
Platform/Data_Governance_Orchestrator/federatedmlrest/lib/: deleters.py  getters.py  initializer.py  updaters.py  validators.py
Platform/Data_Governance_Orchestrator/realms/: realm-export.json
Platform/Data_Governance_Orchestrator/tests/integration/: fixtures.py  test_auto.py
Platform/Data_Governance_Orchestrator/tests/unit/: conftest.py  test_configurations.py  test_datasets.py  test_groups.py  test_members.py  test_ml_models.py  test_proposal.py  test_strategy.py
Platform/FLServerFastAPI/: Dockerfile  README.md  pyproject.toml
Platform/FLServerFastAPI/src/fl-server-fast-api/: app_run.py  common.py  config.yml  keycloak_auth.py  main.py  mongo.py  training_session.py
Platform/FLServerFastAPI/src/fl-server-fast-api/flower_server/: Definitions.py  GlobalVariables.py  Server.py  secrets.yaml
(+160 files in other folders)
