[tool.poetry]
name = "data-governance-metadata"
version = "0.1.0"
description = "Metadata tools for the governance api"
authors = ["HSKA"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
pydantic = "^1.10.2"
fastapi = "^0.85.1"
neo4j = "^5.21"
pyjwt = "^2.8.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
schemathesis = "^3.19.7"
pytest-cov = "^4.0.0"
pytest-runner = "^6.0.0"
flake8 = "^5.0.4"
pylint = "^2.15.5"
bandit = "^1.7.4"
requests = "^2.28.1"
mongomock = "^4.1.2"
mypy = "^1.0.1"
types-pyyaml = "^6.0.12.6"
pytest = "^7.2.1"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
grip = "^4.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
